Home hero image no longer conditional, fixed alignment of last column on footer nav

--- a/content/themes/igcp/blocks/scss/block-home-hero.scss
+++ b/content/themes/igcp/blocks/scss/block-home-hero.scss
@@ -110,12 +110,17 @@ a.her-Home_Link,
 .her-Home_Video,
 .editor-block-list__layout .her-Home_Video {
   @include absolute_fill;
-  object-fit: cover; 
+  object-fit: cover;
   font-family: 'object-fit: cover;';
   z-index: 1;
 }
 
 .her-Home_Video,
 .editor-block-list__layout .her-Home_Video {
+  display: none;
   z-index: 2;
+
+  @include break-min($sm) {
+    display: block;
+  }
 }
