--- a/content/themes/igcp/inc/scss/layout/navigation/_footer.scss
+++ b/content/themes/igcp/inc/scss/layout/navigation/_footer.scss
@@ -21,6 +21,10 @@
 
       &:last-child {
         flex: 0 0 100px;
+
+        & > a {
+          display: none; 
+        }
       }
     }
   }
